# MLOps

./: .gitignore  README.md  _test.py  data.dvc  dockerfile  dvc.yaml  dvc_datagenerator.py  inheritance.py  oops1.py  oops_proj.py  pyproject.toml  req_docker.txt  requirement.txt
.github/workflows/: ci.yaml
CI/: app.py
CI/.github/workflows/: ci.yaml
DOCKER/: app.py
DOCKER/templates/: index.html
DVC/: adv_inheritance.py  dvc.yaml  params.yaml
DVC/.dvc/: config
DVC/data/interim/: test_processed.csv  train_processed.csv
DVC/data/processed/: test_tfidf.csv  train_tfidf.csv
DVC/data/raw/: test.csv  train.csv
DVC/dvclive/: metrics.json  params.yaml
DVC/dvclive/plots/metrics/: accuracy.tsv  auc.tsv  precision.tsv  recall.tsv
DVC/models/: model.pkl
DVC/reports/: metrics.json
FastAPI/: Test.py  pydantic_test.py  pydantic_tutorial.py  pyproject.toml  requirements.txt
MLFlow/: mlflow.db
MLFlow/mlartifacts/0/eafd606a24054392b63611ac9ee841b8/artifacts/: file1.py
MLFlow/src/: autolog.py
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: accuracy.tsv  auc.tsv  precision.tsv  recall.tsv
experiments/: mynotebook.ipynb
mlartifacts/0/994237f3649243c587efa43f36610b60/artifacts/: file1.py
mlartifacts/1/81874786e1e0482aaf944dca4be998dc/artifacts/: file1.py
mlartifacts/1/models/m-9b6bfedddbab433ea66a528ea097f71b/artifacts/: conda.yaml  python_env.yaml
reports/: metrics.json
src/: Hypertuning_Mlflow.py  file1.py  file2.py  file3.py
templates/: greet.html
(+1 files in other folders)
