[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "dvclive>=3.49.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "wordcloud>=1.9.6",
    "xgboost>=3.1.3",
]
