[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.6.5",
    "dvc>=3.66.1",
    "dvclive>=3.49.0",
    "matplotlib>=3.10.8",
    "mlflow==3.9.0",
    "nltk>=3.9.2",
    "pandas<3",
    "protobuf==3.20.*",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<81",
    "wordcloud>=1.9.6",
    "xgboost>=3.1.3",
]
